--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -13,67 +13,88 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6X6-1m-Wxd">
-                                <rect key="frame" x="120.66666666666669" y="171" width="134" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6X6-1m-Wxd">
+                                <rect key="frame" x="137.5" y="178" width="100" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="BjF-Mr-9U0"/>
+                                    <constraint firstAttribute="height" constant="34" id="DUu-lW-DcD"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="STk-tW-4hK">
-                                <rect key="frame" x="120.66666666666669" y="259" width="134" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Te3-YD-7sG">
-                                <rect key="frame" x="120.66666666666669" y="84" width="134" height="67"/>
-                                <fontDescription key="fontDescription" name="PartyLetPlain" family="Party LET" pointSize="57"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RF3-IO-47M">
-                                <rect key="frame" x="120.66666666666669" y="137" width="134" height="26.333333333333343"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RF3-IO-47M">
+                                <rect key="frame" x="161.5" y="139" width="52" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="AsK-Va-uNo"/>
+                                    <constraint firstAttribute="height" constant="29" id="zWq-Dj-YFU"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gjf-2u-hYw">
-                                <rect key="frame" x="141.66666666666666" y="213" width="92" height="26.333333333333258"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gjf-2u-hYw">
+                                <rect key="frame" x="141.5" y="222" width="92" height="26.5"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bv9-et-HT3">
-                                <rect key="frame" x="164.66666666666666" y="318" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bv9-et-HT3">
+                                <rect key="frame" x="137.5" y="307.5" width="100" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="L9H-Eg-PRN"/>
+                                    <constraint firstAttribute="height" constant="53" id="xpb-ST-BkW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                </state>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="STk-tW-4hK">
+                                <rect key="frame" x="137.5" y="258.5" width="100" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Gyp-B7-t8v"/>
+                                    <constraint firstAttribute="width" constant="100" id="eX1-BG-Ce0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vk-logo--fb" translatesAutoresizingMaskIntoConstraints="NO" id="Psx-XB-avq">
+                                <rect key="frame" x="-412.5" y="-10" width="1200" height="154"/>
+                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1200.3299999999999" id="HZW-h3-AVm"/>
+                                    <constraint firstAttribute="height" constant="154" id="lkF-3c-Zmd"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="RF3-IO-47M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0sr-xr-ZMH"/>
-                            <constraint firstItem="STk-tW-4hK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1j0-aQ-izU"/>
-                            <constraint firstItem="Gjf-2u-hYw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2kr-lP-x7l"/>
-                            <constraint firstItem="bv9-et-HT3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D5M-HN-s1M"/>
-                            <constraint firstItem="Gjf-2u-hYw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MaQ-h1-mrZ"/>
-                            <constraint firstItem="bv9-et-HT3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Qkt-g4-C3E"/>
-                            <constraint firstItem="STk-tW-4hK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TYs-Jq-lLJ"/>
-                            <constraint firstItem="Te3-YD-7sG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="bUM-V3-iSN"/>
-                            <constraint firstItem="STk-tW-4hK" firstAttribute="leading" secondItem="RF3-IO-47M" secondAttribute="leading" id="e4s-Ux-yam"/>
-                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gcp-rz-3Vs"/>
-                            <constraint firstItem="RF3-IO-47M" firstAttribute="leading" secondItem="Te3-YD-7sG" secondAttribute="leading" id="ovK-wt-h3k"/>
-                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pqF-WZ-IYC"/>
-                            <constraint firstItem="RF3-IO-47M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tns-Vb-bmU"/>
-                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="leading" secondItem="RF3-IO-47M" secondAttribute="leading" id="wbd-Bo-DB0"/>
-                            <constraint firstItem="Te3-YD-7sG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wod-sf-abc"/>
-                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zzN-hg-bQ5"/>
+                            <constraint firstItem="Gjf-2u-hYw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Eo-lm-aqU"/>
+                            <constraint firstItem="Psx-XB-avq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="-10" id="4P0-90-djL"/>
+                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="top" secondItem="RF3-IO-47M" secondAttribute="bottom" constant="10" id="6ic-Ax-uDr"/>
+                            <constraint firstItem="RF3-IO-47M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EDJ-fi-VAg"/>
+                            <constraint firstItem="STk-tW-4hK" firstAttribute="top" secondItem="Gjf-2u-hYw" secondAttribute="bottom" constant="10" id="P3G-b7-0vc"/>
+                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TkB-qC-nnO"/>
+                            <constraint firstItem="Gjf-2u-hYw" firstAttribute="top" secondItem="6X6-1m-Wxd" secondAttribute="bottom" constant="10" id="WbB-3v-9f0"/>
+                            <constraint firstItem="Psx-XB-avq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aA1-0b-UIx"/>
+                            <constraint firstItem="6X6-1m-Wxd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cyN-Bl-2X1"/>
+                            <constraint firstItem="bv9-et-HT3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kFm-G1-8pO"/>
+                            <constraint firstItem="bv9-et-HT3" firstAttribute="top" secondItem="STk-tW-4hK" secondAttribute="bottom" constant="15" id="pBo-dZ-164"/>
+                            <constraint firstItem="RF3-IO-47M" firstAttribute="top" secondItem="Psx-XB-avq" secondAttribute="bottom" constant="-5" id="rCM-zO-1uc"/>
+                            <constraint firstItem="STk-tW-4hK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="viq-dF-HXr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="449.27536231884062" y="128.57142857142856"/>
+            <point key="canvasLocation" x="270" y="-70"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="vk-logo--fb" width="1200" height="630"/>
+    </resources>
 </document>
